Add: Servlets models and Index.html changes

--- a/src/main/webapp/pages/signIn.html
+++ b/src/main/webapp/pages/signIn.html
@@ -27,6 +27,10 @@
                 <input type="checkbox" value="remember-me" name="keepSession"> Remember me
             </label>
         </div>
+
+        <a class="py-2 d-none d-md-inline-block" href="/recoverPassword">Forgot your password?</a>
+        <a class="py-2 d-none d-md-inline-block" href="/signUp">I don't have an account</a>
+
         <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">&copy; 2022–2023</p>
     </form>
