--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,9 +17,8 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img" viewBox="0 0 24 24"><title>App</title><circle cx="12" cy="12" r="10"/><path d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/></svg>
             </a>
             <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Sign In</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Sign Up</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Place an order</a>
+            <a class="py-2 d-none d-md-inline-block" href="signIn">Sign In</a>
+            <a class="py-2 d-none d-md-inline-block" href="app/order">Place an order</a>
         </nav>
     </header>
 </div>
@@ -33,6 +32,7 @@
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active">
+            <img src="./images/fondoNotebook.png"/>
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <rect width="100%" height="100%" fill="#777"/>
@@ -40,13 +40,14 @@
 
             <div class="container">
                 <div class="carousel-caption text-start">
-                    <h1>Example headline.</h1>
-                    <p>Some representative placeholder content for the first slide of the carousel.</p>
+                    <h1>Visit us.</h1>
+                    <p>Place your order easy , and we will ship your package ASAP!</p>
                     <p><a class="btn btn-lg btn-warning" href="#">Sign up today</a></p>
                 </div>
             </div>
         </div>
         <div class="carousel-item">
+            <img src="./images/fondoNotebook.png"/>
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <rect width="100%" height="100%" fill="#777"/>
@@ -54,13 +55,14 @@
 
             <div class="container">
                 <div class="carousel-caption">
-                    <h1>Another example headline.</h1>
-                    <p>Some representative placeholder content for the second slide of the carousel.</p>
+                    <h1>Place an order easily</h1>
+                    <p>Just push the button</p>
                     <p><a class="btn btn-lg btn-warning" href="#">Learn more</a></p>
                 </div>
             </div>
         </div>
         <div class="carousel-item">
+            <img src="./images/fondoNotebook.png"/>
             <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
                  aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
                 <rect width="100%" height="100%" fill="#777"/>
@@ -68,8 +70,8 @@
 
             <div class="container">
                 <div class="carousel-caption text-end">
-                    <h1>One more for good measure.</h1>
-                    <p>Some representative placeholder content for the third slide of this carousel.</p>
+                    <h1>Buy secure and fast</h1>
+                    <p>Our payment processor encrypt your information, always!</p>
                     <p><a class="btn btn-lg btn-warning" href="#">Browse gallery</a></p>
                 </div>
             </div>
