Add: Sign In page validations

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,7 +18,7 @@
             </a>
             <a class="py-2 d-none d-md-inline-block" href="#">Home</a>
             <a class="py-2 d-none d-md-inline-block" href="signIn">Sign In</a>
-            <a class="py-2 d-none d-md-inline-block" href="app/order">Place an order</a>
+            <a class="py-2 d-none d-md-inline-block" href="order">Place an order</a>
         </nav>
     </header>
 </div>
