--- a/src/main/webapp/pages/signIn.html
+++ b/src/main/webapp/pages/signIn.html
@@ -14,8 +14,8 @@
         <h1 class="h3 mb-3 fw-normal">Login</h1>
 
         <div class="form-floating">
-            <input type="email" name="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email</label>
+            <input type="text" name="username" class="form-control" id="floatingInput" placeholder="MyUserName">
+            <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
             <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
@@ -24,7 +24,7 @@
 
         <div class="checkbox mb-3">
             <label>
-                <input type="checkbox" value="remember-me" name="keepSession"> Remember me
+                <input type="checkbox" value="true" name="keepSession"> Remember me
             </label>
         </div>
 
