--- a/src/main/webapp/pages/signin.html
+++ b/src/main/webapp/pages/signin.html
@@ -9,12 +9,12 @@
 
 <body class="text-center">
 <div class="form-signin bg-light">
-    <form action="/app/signIn" method="post">
+    <form action="/app/signin" method="post">
         <img class="mb-4" src="../images/android-chrome-512x512.png" alt="company-logo" width="72">
         <h1 class="h3 mb-3 fw-normal">Login</h1>
 
         <div class="form-floating">
-            <input type="text" name="username" class="form-control" id="floatingInput" placeholder="MyUserName">
+            <input type="text" name="username" class="form-control" id="floatingInput" placeholder="Username">
             <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
@@ -28,7 +28,7 @@
             </label>
         </div>
 
-        <a class="py-2 d-none d-md-inline-block" href="/recoverPassword">Forgot your password?</a>
+        <a class="py-2 d-none d-md-inline-block" href="/passwordRecovery">Forgot your password?</a>
         <a class="py-2 d-none d-md-inline-block" href="/signUp">I don't have an account</a>
 
         <button class="w-100 btn btn-lg btn-dark" type="submit">Sign in</button>
